--- a/01 Recurrence Relations.ipynb
+++ b/01 Recurrence Relations.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-23T18:21:49.158703Z",
-     "start_time": "2019-11-23T18:21:48.198782Z"
+     "end_time": "2020-02-12T15:11:15.433381Z",
+     "start_time": "2020-02-12T15:10:52.469318Z"
     }
    },
    "outputs": [
@@ -31,7 +31,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from tqdm.auto import tqdm\n",
+    "from tqdm.auto import tqdm, trange\n",
     "tqdm.pandas()"
    ]
   },
@@ -47,8 +47,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-23T18:21:49.968594Z",
-     "start_time": "2019-11-23T18:21:49.162663Z"
+     "end_time": "2020-02-12T15:11:18.944593Z",
+     "start_time": "2020-02-12T15:11:15.448582Z"
     }
    },
    "outputs": [],
@@ -61,8 +61,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-23T18:21:49.991446Z",
-     "start_time": "2019-11-23T18:21:49.971499Z"
+     "end_time": "2020-02-12T15:11:19.662804Z",
+     "start_time": "2020-02-12T15:11:19.352251Z"
     }
    },
    "outputs": [
@@ -97,31 +97,31 @@
        "      <td>0</td>\n",
        "      <td>[1, 3, 13, 87, 1053, 28576, 2141733, 508147108...</td>\n",
        "      <td>14</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>[1, 2, 1, 5, 5, 1, 11, 16, 7, 1, 23, 44, 30, 9...</td>\n",
        "      <td>57</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>[1, 2, 4, 5, 8, 10, 16, 20, 32, 40, 64, 80, 12...</td>\n",
        "      <td>41</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>[1, 8, 25, 83, 274, 2275, 132224, 1060067, 331...</td>\n",
        "      <td>20</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>[1, 111, 12211, 1343211, 147753211, 1625285321...</td>\n",
        "      <td>12</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -129,11 +129,11 @@
       ],
       "text/plain": [
        "                                            Sequence  Length  Solved\n",
-       "0  [1, 3, 13, 87, 1053, 28576, 2141733, 508147108...      14     NaN\n",
-       "1  [1, 2, 1, 5, 5, 1, 11, 16, 7, 1, 23, 44, 30, 9...      57     NaN\n",
-       "2  [1, 2, 4, 5, 8, 10, 16, 20, 32, 40, 64, 80, 12...      41     NaN\n",
-       "3  [1, 8, 25, 83, 274, 2275, 132224, 1060067, 331...      20     NaN\n",
-       "4  [1, 111, 12211, 1343211, 147753211, 1625285321...      12     NaN"
+       "0  [1, 3, 13, 87, 1053, 28576, 2141733, 508147108...      14       0\n",
+       "1  [1, 2, 1, 5, 5, 1, 11, 16, 7, 1, 23, 44, 30, 9...      57       0\n",
+       "2  [1, 2, 4, 5, 8, 10, 16, 20, 32, 40, 64, 80, 12...      41       0\n",
+       "3  [1, 8, 25, 83, 274, 2275, 132224, 1060067, 331...      20       0\n",
+       "4  [1, 111, 12211, 1343211, 147753211, 1625285321...      12       0"
       ]
      },
      "execution_count": 3,
@@ -150,15 +150,15 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-23T18:22:10.233540Z",
-     "start_time": "2019-11-23T18:21:49.996431Z"
+     "end_time": "2020-02-12T15:11:55.272078Z",
+     "start_time": "2020-02-12T15:11:19.699706Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ec18ba03ee04c4da50aa412f213571b",
+       "model_id": "ab122accb7de402c9a1230d9808e57fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -186,8 +186,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-23T18:22:10.267449Z",
-     "start_time": "2019-11-23T18:22:10.236564Z"
+     "end_time": "2020-02-12T15:11:55.465887Z",
+     "start_time": "2020-02-12T15:11:55.312007Z"
     }
    },
    "outputs": [
@@ -231,8 +231,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-23T18:22:10.377492Z",
-     "start_time": "2019-11-23T18:22:10.270472Z"
+     "end_time": "2020-02-12T15:11:55.562932Z",
+     "start_time": "2020-02-12T15:11:55.489838Z"
     }
    },
    "outputs": [],
@@ -272,8 +272,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-23T18:22:10.509578Z",
-     "start_time": "2019-11-23T18:22:10.384473Z"
+     "end_time": "2020-02-12T15:11:55.720423Z",
+     "start_time": "2020-02-12T15:11:55.590058Z"
     }
    },
    "outputs": [],
@@ -296,8 +296,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-23T18:58:33.828896Z",
-     "start_time": "2019-11-23T18:22:10.524542Z"
+     "end_time": "2020-02-12T16:32:08.201939Z",
+     "start_time": "2020-02-12T15:12:03.340646Z"
     },
     "scrolled": false
    },
@@ -312,12 +312,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06d88348ddc84163a6c875dec3d1aace",
+       "model_id": "fde94409c82f4bbfa00224d9efb1480a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=225263), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -347,12 +347,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb5dca040e5744d09fe88ccfb700b65d",
+       "model_id": "f2381364af8d4b34b5da9a91a71e75af",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=225263), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -382,12 +382,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa4476e48f4a49ca8e150852a69a88f1",
+       "model_id": "8bdab37f2d3d4c31bd44b0fad16b2184",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=225263), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -417,12 +417,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "933a3936d08b4e1dadf7af00801d9afc",
+       "model_id": "453025ee8c5b44b0aba4d3e1ae33238c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=225263), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -452,12 +452,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "922aaaac5bc44c33a771b40f51a73950",
+       "model_id": "1ee117066e3a4f4ea7f75837f94da2d8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=225263), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -487,12 +487,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bfe927b2c2554596a851b91f3596f29d",
+       "model_id": "3c3c2f1383614d14a02e6aea31d33c9a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=225263), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -522,12 +522,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ab6c35b083d42858a0299607f47f252",
+       "model_id": "ee1d8fa098e24fcea08ad714d6ec0d7a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=225263), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -557,12 +557,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "178f7994168d4626aa65928ef47191f6",
+       "model_id": "48a7e7ac56b74a22a0b7c2e00837fa3e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=225263), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -592,12 +592,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b81ace9d5a0047eca9be91906695fa56",
+       "model_id": "f84cebcd7ba744daa6d6eda6e348e87e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=225263), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -627,12 +627,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4b013139d9b436088f8384d823dfaab",
+       "model_id": "8c890b17198f4ed4ab5fd6c2d5dad85c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=225263), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -662,12 +662,15 @@
    "source": [
     "for order in range(10, 0, -1):\n",
     "    print(f'Solving {order} order')\n",
+    "    data[f'r{order}'] = 0\n",
     "    count = 0\n",
-    "    for i, seq in tqdm(enumerate(data['Sequence'])):\n",
+    "    for i in trange(len(data['Sequence'])):\n",
+    "        seq = data['Sequence'][i]\n",
     "        coeff = checkRecurrence(seq,order)\n",
     "        if coeff:\n",
     "            count += 1\n",
-    "            data.loc[i, 'Solved'] = f'r{order}'\n",
+    "            data.loc[i, 'Solved'] = 1\n",
+    "            data.loc[i, f'r{order}'] = 1\n",
     "            if count == 1:\n",
     "                fig, ax = plt.subplots()\n",
     "                ax.plot(seq)\n",
@@ -687,38 +690,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-23T18:58:33.939104Z",
-     "start_time": "2019-11-23T18:58:33.833866Z"
+     "end_time": "2020-02-12T16:59:38.704282Z",
+     "start_time": "2020-02-12T16:59:38.668379Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "       71.36%\n",
-       "r3      4.74%\n",
-       "r4      3.99%\n",
-       "r2      3.68%\n",
-       "r5      3.61%\n",
-       "r7       3.3%\n",
-       "r6      3.18%\n",
-       "r8      2.65%\n",
-       "r9      1.69%\n",
-       "r10     1.06%\n",
-       "r1      0.74%\n",
-       "Name: Solved, dtype: object"
+       "Solved    28.64%\n",
+       "r10        7.89%\n",
+       "r9         9.34%\n",
+       "r8        10.28%\n",
+       "r7        10.05%\n",
+       "r6         9.06%\n",
+       "r5         8.13%\n",
+       "r4         7.62%\n",
+       "r3         6.68%\n",
+       "r2         4.18%\n",
+       "r1         0.74%\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data['Solved'].fillna('').value_counts(normalize=True).mul(100).round(2).astype(str) + '%'"
+    "data.drop(['Sequence', 'Length'], axis=1).mean(0).mul(100).round(2).astype(str) + '%'"
    ]
   },
   {
@@ -726,14 +729,21 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-23T18:58:37.170909Z",
-     "start_time": "2019-11-23T18:58:33.942093Z"
+     "end_time": "2020-02-12T16:32:53.404305Z",
+     "start_time": "2020-02-12T16:32:47.371386Z"
     }
    },
    "outputs": [],
    "source": [
     "data.to_csv('Sequences.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
