--- a/00 EDA .ipynb
+++ b/00 EDA .ipynb
@@ -19,8 +19,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-11T17:13:49.079563Z",
-     "start_time": "2020-02-11T17:13:48.146333Z"
+     "end_time": "2020-05-06T14:56:08.376697Z",
+     "start_time": "2020-05-06T14:56:07.114947Z"
     }
    },
    "outputs": [
@@ -54,13 +54,13 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-11T17:13:49.919365Z",
-     "start_time": "2020-02-11T17:13:49.083520Z"
+     "end_time": "2020-05-06T14:56:09.274807Z",
+     "start_time": "2020-05-06T14:56:08.379660Z"
     }
    },
    "outputs": [],
    "source": [
-    "data = pd.read_csv('Sequences.csv', usecols=['Sequence'])"
+    "data = pd.read_csv('Sequences.csv')"
    ]
   },
   {
@@ -68,8 +68,91 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-11T17:13:49.932250Z",
-     "start_time": "2020-02-11T17:13:49.922277Z"
+     "end_time": "2020-05-06T14:56:09.303730Z",
+     "start_time": "2020-05-06T14:56:09.278798Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sequence</th>\n",
+       "      <th>Length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>[1, 3, 13, 87, 1053, 28576, 2141733, 508147108...</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>[1, 2, 1, 5, 5, 1, 11, 16, 7, 1, 23, 44, 30, 9...</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>[1, 2, 4, 5, 8, 10, 16, 20, 32, 40, 64, 80, 12...</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>[1, 8, 25, 83, 274, 2275, 132224, 1060067, 331...</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>[1, 111, 12211, 1343211, 147753211, 1625285321...</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            Sequence  Length\n",
+       "0  [1, 3, 13, 87, 1053, 28576, 2141733, 508147108...      14\n",
+       "1  [1, 2, 1, 5, 5, 1, 11, 16, 7, 1, 23, 44, 30, 9...      57\n",
+       "2  [1, 2, 4, 5, 8, 10, 16, 20, 32, 40, 64, 80, 12...      41\n",
+       "3  [1, 8, 25, 83, 274, 2275, 132224, 1060067, 331...      20\n",
+       "4  [1, 111, 12211, 1343211, 147753211, 1625285321...      12"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-06T14:56:09.524091Z",
+     "start_time": "2020-05-06T14:56:09.308718Z"
     }
    },
    "outputs": [
@@ -79,7 +162,7 @@
        "225263"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,11 +173,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-11T17:14:08.271794Z",
-     "start_time": "2020-02-11T17:13:49.937235Z"
+     "end_time": "2020-05-06T14:56:28.766597Z",
+     "start_time": "2020-05-06T14:56:09.530074Z"
     }
    },
    "outputs": [],
@@ -104,11 +187,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-11T17:14:08.388436Z",
-     "start_time": "2020-02-11T17:14:08.273708Z"
+     "end_time": "2020-05-06T14:56:28.798800Z",
+     "start_time": "2020-05-06T14:56:28.768363Z"
     }
    },
    "outputs": [
@@ -131,7 +214,7 @@
        " 11474377948948020660089085281068730]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,18 +225,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-11T17:14:09.170258Z",
-     "start_time": "2020-02-11T17:14:08.390396Z"
+     "end_time": "2020-05-06T14:56:29.451323Z",
+     "start_time": "2020-05-06T14:56:28.802789Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13c7fd77ef6848bbbd2a3a2bc9b4ef15",
+       "model_id": "4fa611e840a54a83b9fa46a0e2e8ded2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -178,11 +261,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-11T17:14:09.573729Z",
-     "start_time": "2020-02-11T17:14:09.175164Z"
+     "end_time": "2020-05-06T14:56:29.548583Z",
+     "start_time": "2020-05-06T14:56:29.456310Z"
     }
    },
    "outputs": [
@@ -212,21 +295,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-11T17:14:13.174049Z",
-     "start_time": "2020-02-11T17:14:09.576722Z"
+     "end_time": "2020-05-06T14:56:30.267413Z",
+     "start_time": "2020-05-06T14:56:29.553567Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a5148a7b38>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x29130b11550>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -249,11 +332,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-11T17:14:13.424044Z",
-     "start_time": "2020-02-11T17:14:13.179034Z"
+     "end_time": "2020-05-06T14:56:30.302321Z",
+     "start_time": "2020-05-06T14:56:30.271404Z"
     }
    },
    "outputs": [
@@ -263,7 +346,7 @@
        "225263"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,31 +359,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-11T17:14:13.460853Z",
-     "start_time": "2020-02-11T17:14:13.434011Z"
+     "end_time": "2020-05-06T14:56:33.247779Z",
+     "start_time": "2020-05-06T14:56:30.312293Z"
     }
    },
    "outputs": [],
    "source": [
-    "data['Solved'] = 0"
+    "data[['Sequence', 'Length']].to_csv('Sequences.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-11T17:14:17.038497Z",
-     "start_time": "2020-02-11T17:14:13.464875Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "data.to_csv('Sequences.csv', index=False)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
