--- a/02 Polynomial Sequences.ipynb
+++ b/02 Polynomial Sequences.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-12T16:35:22.884316Z",
-     "start_time": "2020-02-12T16:35:18.484130Z"
+     "end_time": "2020-05-07T04:27:22.112794Z",
+     "start_time": "2020-05-07T04:27:20.922650Z"
     }
    },
    "outputs": [
@@ -47,8 +47,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-12T16:35:23.799898Z",
-     "start_time": "2020-02-12T16:35:22.899277Z"
+     "end_time": "2020-05-07T04:27:22.917646Z",
+     "start_time": "2020-05-07T04:27:22.115754Z"
     }
    },
    "outputs": [],
@@ -61,171 +61,15 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-12T16:35:23.883757Z",
-     "start_time": "2020-02-12T16:35:23.827794Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Sequence</th>\n",
-       "      <th>Length</th>\n",
-       "      <th>Solved</th>\n",
-       "      <th>r10</th>\n",
-       "      <th>r9</th>\n",
-       "      <th>r8</th>\n",
-       "      <th>r7</th>\n",
-       "      <th>r6</th>\n",
-       "      <th>r5</th>\n",
-       "      <th>r4</th>\n",
-       "      <th>r3</th>\n",
-       "      <th>r2</th>\n",
-       "      <th>r1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>[1, 3, 13, 87, 1053, 28576, 2141733, 508147108...</td>\n",
-       "      <td>14</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>[1, 2, 1, 5, 5, 1, 11, 16, 7, 1, 23, 44, 30, 9...</td>\n",
-       "      <td>57</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>[1, 2, 4, 5, 8, 10, 16, 20, 32, 40, 64, 80, 12...</td>\n",
-       "      <td>41</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>[1, 8, 25, 83, 274, 2275, 132224, 1060067, 331...</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>[1, 111, 12211, 1343211, 147753211, 1625285321...</td>\n",
-       "      <td>12</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                            Sequence  Length  Solved  r10  r9  \\\n",
-       "0  [1, 3, 13, 87, 1053, 28576, 2141733, 508147108...      14       0    0   0   \n",
-       "1  [1, 2, 1, 5, 5, 1, 11, 16, 7, 1, 23, 44, 30, 9...      57       0    0   0   \n",
-       "2  [1, 2, 4, 5, 8, 10, 16, 20, 32, 40, 64, 80, 12...      41       1    0   0   \n",
-       "3  [1, 8, 25, 83, 274, 2275, 132224, 1060067, 331...      20       1    0   0   \n",
-       "4  [1, 111, 12211, 1343211, 147753211, 1625285321...      12       1    0   0   \n",
-       "\n",
-       "   r8  r7  r6  r5  r4  r3  r2  r1  \n",
-       "0   0   0   0   0   0   0   0   0  \n",
-       "1   0   0   0   0   0   0   0   0  \n",
-       "2   0   0   0   0   1   0   0   0  \n",
-       "3   1   1   1   0   0   0   0   0  \n",
-       "4   0   0   0   0   0   0   1   1  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-12T16:35:44.858557Z",
-     "start_time": "2020-02-12T16:35:23.905699Z"
+     "end_time": "2020-05-07T04:27:43.623858Z",
+     "start_time": "2020-05-07T04:27:22.921638Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a63d85fdbfe74a58a8e1beb39d02b25c",
+       "model_id": "068a0811069547b58ae765c8a808b985",
        "version_major": 2,
        "version_minor": 0
       },
@@ -250,40 +94,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-12T16:35:44.923393Z",
-     "start_time": "2020-02-12T16:35:44.898451Z"
+     "end_time": "2020-05-07T08:26:38.114565Z",
+     "start_time": "2020-05-07T08:26:37.598920Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1,\n",
-       " 3,\n",
-       " 13,\n",
-       " 87,\n",
-       " 1053,\n",
-       " 28576,\n",
-       " 2141733,\n",
-       " 508147108,\n",
-       " 402135275365,\n",
-       " 1073376057490373,\n",
-       " 9700385489355970183,\n",
-       " 298434346895322960005291,\n",
-       " 31479360095907908092817694945,\n",
-       " 11474377948948020660089085281068730]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data['Sequence'][0]"
+    "solutions = pd.read_csv('Solutions.csv')"
    ]
   },
   {
@@ -295,58 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-12T16:36:37.545159Z",
-     "start_time": "2020-02-12T16:36:37.526213Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def checkPolynomial(seq, order= 2, minlength = 4):\n",
-    "\n",
-    "    if len(seq)< max((2*order+1), minlength):\n",
-    "        return None\n",
-    "    \n",
-    "    # Set up the system of equations \n",
-    "    A = [[i**j for j in range(order+1)] for i in range(order+1)]\n",
-    "    b = seq[:order+1]\n",
-    "    A,b =np.array(A), np.array(b)\n",
-    "    try: \n",
-    "        if np.linalg.det(A)==0:\n",
-    "            return None\n",
-    "    except TypeError:\n",
-    "        return None\n",
-    "   \n",
-    "    #  Solve for the coefficients (c0, c1, c2, ...)\n",
-    "    coeffs = np.linalg.inv(A).dot(b)  \n",
-    "    \n",
-    "    #  Check if the next terms satisfy recurrence relation\n",
-    "    for i in range(order, len(seq)):\n",
-    "        predict = np.sum(coeffs*np.array([i**j for j in range(order+1)]))\n",
-    "        error = abs(predict-seq[i])/seq[i] if seq[i] != 0  else abs(predict-seq[i])\n",
-    "        if error>10**(-2):\n",
-    "            return None\n",
-    "    \n",
-    "    return list(coeffs)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-12T16:36:38.237267Z",
-     "start_time": "2020-02-12T16:36:38.229289Z"
+     "end_time": "2020-05-07T04:27:44.096382Z",
+     "start_time": "2020-05-07T04:27:43.972925Z"
     }
    },
    "outputs": [],
    "source": [
-    "def predictNextTerm_Polynomial(seq, coeffs):\n",
-    "    order = len(coeffs)\n",
-    "    predict = np.sum(coeffs*np.array([i**j for j in range(order+1)]))\n",
-    "    return int(round(predict))"
+    "from sequences.polynomial_sequences import *"
    ]
   },
   {
@@ -361,8 +139,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-12T16:56:14.749448Z",
-     "start_time": "2020-02-12T16:37:04.740279Z"
+     "end_time": "2020-05-07T07:45:07.540094Z",
+     "start_time": "2020-05-07T04:27:44.103330Z"
     },
     "scrolled": false
    },
@@ -377,7 +155,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a57f3ca92ab945beb084fad543a06969",
+       "model_id": "bfca5d2a7d2b493797e1bcaa8f560a12",
        "version_major": 2,
        "version_minor": 0
       },
@@ -412,7 +190,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "959b5d3891fd4245b798663fd7e606f9",
+       "model_id": "13ca7c1bff294892abacb67c563f0c5d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -447,7 +225,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9e67b3b931c4f868f603e1c36b91748",
+       "model_id": "c754d6ec41e14ff1801554ee1445dc44",
        "version_major": 2,
        "version_minor": 0
       },
@@ -482,7 +260,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6f0d0795dd240baa1f8ef02bb03c957",
+       "model_id": "a5281ce91fdd4d50aaeff8015a6dd603",
        "version_major": 2,
        "version_minor": 0
       },
@@ -517,7 +295,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb71d5f9a195493a9f7dbaca3945e6c5",
+       "model_id": "39fb44b4ce5b4b41aa6427ad7fc79e4b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -552,7 +330,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60d5d425cc6b45e9a4826a6b8ed43658",
+       "model_id": "e49dfb948f27490f9e69e4b9be19d631",
        "version_major": 2,
        "version_minor": 0
       },
@@ -587,7 +365,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1ecb976934b44708f47631c7d174860",
+       "model_id": "dafe7119b5264f52b779712984aca2d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -622,7 +400,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d6057e60c91947ee83e8e3ed5325f963",
+       "model_id": "4a803f43ab0442e1832b6cb8e615e736",
        "version_major": 2,
        "version_minor": 0
       },
@@ -657,7 +435,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95cd3abef96242b5b921180341ae605c",
+       "model_id": "f8739112cb9349a4b76573de6f81b80e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -692,7 +470,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35903b3ab7704eeaa21c369f0f8ad035",
+       "model_id": "19901a22a08945edbe10eadff4a89944",
        "version_major": 2,
        "version_minor": 0
       },
@@ -728,14 +506,14 @@
     "for order in range(10, 0, -1):\n",
     "    print(f'Solving {order} order')\n",
     "    count = 0\n",
-    "    data[f'p{order}'] = 0\n",
+    "    solutions[f'p{order}'] = 0\n",
     "    for i in trange(len(data['Sequence'])):\n",
     "        seq = data['Sequence'][i]\n",
     "        coeff = checkPolynomial(seq,order)\n",
     "        if coeff:\n",
     "            count += 1\n",
-    "            data.loc[i, 'Solved'] = 1\n",
-    "            data.loc[i, f'p{order}'] = 1\n",
+    "            solutions.loc[i, 'Solved'] = 1\n",
+    "            solutions.loc[i, f'p{order}'] = 1\n",
     "            if count == 1:\n",
     "                fig, ax = plt.subplots()\n",
     "                ax.plot(seq)\n",
@@ -755,11 +533,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-12T16:59:28.281981Z",
-     "start_time": "2020-02-12T16:59:28.195542Z"
+     "end_time": "2020-05-07T07:45:07.722122Z",
+     "start_time": "2020-05-07T07:45:07.571011Z"
     }
    },
    "outputs": [
@@ -790,13 +568,13 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.drop(['Sequence', 'Length'], axis=1).mean(0).mul(100).round(2).astype(str) + '%'"
+    "solutions.drop(['Id'], axis=1).mean(0).mul(100).round(2).astype(str) + '%'"
    ]
   },
   {
@@ -804,13 +582,37 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-12T16:57:17.242191Z",
-     "start_time": "2020-02-12T16:57:09.075703Z"
+     "end_time": "2020-05-07T07:45:07.966944Z",
+     "start_time": "2020-05-07T07:45:07.725116Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "linear recurrence relations 28.64 %\n",
+      "polynomial sequences 2.58 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('linear recurrence relations', round(solutions[[f'r{i}' for i in range(1, 11)]].max(axis=1).mean() * 100, 2), '%')\n",
+    "print('polynomial sequences', round(solutions[[f'p{i}' for i in range(1, 11)]].max(axis=1).mean() * 100, 2), '%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-07T07:45:13.874398Z",
+     "start_time": "2020-05-07T07:45:07.969936Z"
     }
    },
    "outputs": [],
    "source": [
-    "data.to_csv('Sequences.csv', index=False)"
+    "solutions.to_csv('Solutions.csv', index=False)"
    ]
   },
   {
