--- a/01 Recurrence Relations.ipynb
+++ b/01 Recurrence Relations.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-12T15:11:15.433381Z",
-     "start_time": "2020-02-12T15:10:52.469318Z"
+     "end_time": "2020-05-06T15:59:25.504693Z",
+     "start_time": "2020-05-06T15:59:24.107905Z"
     }
    },
    "outputs": [
@@ -47,8 +47,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-12T15:11:18.944593Z",
-     "start_time": "2020-02-12T15:11:15.448582Z"
+     "end_time": "2020-05-06T15:59:26.338403Z",
+     "start_time": "2020-05-06T15:59:25.508682Z"
     }
    },
    "outputs": [],
@@ -61,104 +61,15 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-12T15:11:19.662804Z",
-     "start_time": "2020-02-12T15:11:19.352251Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Sequence</th>\n",
-       "      <th>Length</th>\n",
-       "      <th>Solved</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>[1, 3, 13, 87, 1053, 28576, 2141733, 508147108...</td>\n",
-       "      <td>14</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>[1, 2, 1, 5, 5, 1, 11, 16, 7, 1, 23, 44, 30, 9...</td>\n",
-       "      <td>57</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>[1, 2, 4, 5, 8, 10, 16, 20, 32, 40, 64, 80, 12...</td>\n",
-       "      <td>41</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>[1, 8, 25, 83, 274, 2275, 132224, 1060067, 331...</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>[1, 111, 12211, 1343211, 147753211, 1625285321...</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                            Sequence  Length  Solved\n",
-       "0  [1, 3, 13, 87, 1053, 28576, 2141733, 508147108...      14       0\n",
-       "1  [1, 2, 1, 5, 5, 1, 11, 16, 7, 1, 23, 44, 30, 9...      57       0\n",
-       "2  [1, 2, 4, 5, 8, 10, 16, 20, 32, 40, 64, 80, 12...      41       0\n",
-       "3  [1, 8, 25, 83, 274, 2275, 132224, 1060067, 331...      20       0\n",
-       "4  [1, 111, 12211, 1343211, 147753211, 1625285321...      12       0"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-12T15:11:55.272078Z",
-     "start_time": "2020-02-12T15:11:19.699706Z"
+     "end_time": "2020-05-06T15:59:47.141852Z",
+     "start_time": "2020-05-06T15:59:26.340401Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab122accb7de402c9a1230d9808e57fd",
+       "model_id": "aeb97450221e420294b0d9b85352f1a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -186,37 +97,13 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-12T15:11:55.465887Z",
-     "start_time": "2020-02-12T15:11:55.312007Z"
+     "end_time": "2020-05-06T15:59:47.333269Z",
+     "start_time": "2020-05-06T15:59:47.181713Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1,\n",
-       " 3,\n",
-       " 13,\n",
-       " 87,\n",
-       " 1053,\n",
-       " 28576,\n",
-       " 2141733,\n",
-       " 508147108,\n",
-       " 402135275365,\n",
-       " 1073376057490373,\n",
-       " 9700385489355970183,\n",
-       " 298434346895322960005291,\n",
-       " 31479360095907908092817694945,\n",
-       " 11474377948948020660089085281068730]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data['Sequence'][0]"
+    "solutions = pd.read_csv('Solutions.csv')"
    ]
   },
   {
@@ -228,60 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-12T15:11:55.562932Z",
-     "start_time": "2020-02-12T15:11:55.489838Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def checkRecurrence(seq, order= 2, minlength = 7):\n",
-    "\n",
-    "    if len(seq)< max((2*order+1), minlength):\n",
-    "        return None\n",
-    "    \n",
-    "    # Set up the system of equations \n",
-    "    A,b = [], []\n",
-    "    for i in range(order):\n",
-    "        A.append(seq[i:i+order])\n",
-    "        b.append(seq[i+order])\n",
-    "    A,b =np.array(A), np.array(b)\n",
-    "    try: \n",
-    "        if np.linalg.det(A)==0:\n",
-    "            return None\n",
-    "    except TypeError:\n",
-    "        return None\n",
-    "   \n",
-    "    #  Solve for the coefficients (c0, c1, c2, ...)\n",
-    "    coeffs = np.linalg.inv(A).dot(b)  \n",
-    "    \n",
-    "    #  Check if the next terms satisfy recurrence relation\n",
-    "    for i in range(2*order, len(seq)):\n",
-    "        predict = np.sum(coeffs*np.array(seq[i-order:i]))\n",
-    "        error = abs(predict-seq[i])/seq[i] if seq[i] != 0  else abs(predict-seq[i])\n",
-    "        if error>10**(-2):\n",
-    "            return None\n",
-    "    \n",
-    "    return list(coeffs)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-12T15:11:55.720423Z",
-     "start_time": "2020-02-12T15:11:55.590058Z"
+     "end_time": "2020-05-06T15:59:47.526786Z",
+     "start_time": "2020-05-06T15:59:47.389352Z"
     }
    },
    "outputs": [],
    "source": [
-    "def predictNextTerm_Recurrence(seq, coeffs):\n",
-    "    order = len(coeffs)\n",
-    "    predict = np.sum(coeffs*np.array(seq[-order:]))\n",
-    "    return int(round(predict))"
+    "from sequences.linear_recurrence_relations import *"
    ]
   },
   {
@@ -296,8 +139,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-12T16:32:08.201939Z",
-     "start_time": "2020-02-12T15:12:03.340646Z"
+     "end_time": "2020-05-06T21:53:56.510530Z",
+     "start_time": "2020-05-06T15:59:47.536761Z"
     },
     "scrolled": false
    },
@@ -312,7 +155,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fde94409c82f4bbfa00224d9efb1480a",
+       "model_id": "af97805210ba41a19d26a9a291302ea4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -347,7 +190,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2381364af8d4b34b5da9a91a71e75af",
+       "model_id": "c439481b193c4cddb02a0c2bd0259c01",
        "version_major": 2,
        "version_minor": 0
       },
@@ -382,7 +225,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8bdab37f2d3d4c31bd44b0fad16b2184",
+       "model_id": "a7234aff0ad4480091b629da3826cbad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -417,7 +260,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "453025ee8c5b44b0aba4d3e1ae33238c",
+       "model_id": "c052a7a99735485497b323d9e4d02161",
        "version_major": 2,
        "version_minor": 0
       },
@@ -452,7 +295,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ee117066e3a4f4ea7f75837f94da2d8",
+       "model_id": "c7f464f795e54b889ec8c03b25d494d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -487,7 +330,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c3c2f1383614d14a02e6aea31d33c9a",
+       "model_id": "e9c633e207c8494980eab31aa5fd95ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -522,7 +365,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee1d8fa098e24fcea08ad714d6ec0d7a",
+       "model_id": "4e3ecfd585e24648ad83a3f411954999",
        "version_major": 2,
        "version_minor": 0
       },
@@ -557,7 +400,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48a7e7ac56b74a22a0b7c2e00837fa3e",
+       "model_id": "6ccbb463bad444c7a5d8c9a7501520c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -592,7 +435,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f84cebcd7ba744daa6d6eda6e348e87e",
+       "model_id": "45964182e6db4149bfc3457589dde379",
        "version_major": 2,
        "version_minor": 0
       },
@@ -627,7 +470,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c890b17198f4ed4ab5fd6c2d5dad85c",
+       "model_id": "a04c0d1cff9343e1ad0182defadc2d7a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -662,15 +505,15 @@
    "source": [
     "for order in range(10, 0, -1):\n",
     "    print(f'Solving {order} order')\n",
-    "    data[f'r{order}'] = 0\n",
+    "    solutions[f'r{order}'] = 0\n",
     "    count = 0\n",
     "    for i in trange(len(data['Sequence'])):\n",
     "        seq = data['Sequence'][i]\n",
     "        coeff = checkRecurrence(seq,order)\n",
     "        if coeff:\n",
     "            count += 1\n",
-    "            data.loc[i, 'Solved'] = 1\n",
-    "            data.loc[i, f'r{order}'] = 1\n",
+    "            solutions.loc[i, 'Solved'] = 1\n",
+    "            solutions.loc[i, f'r{order}'] = 1\n",
     "            if count == 1:\n",
     "                fig, ax = plt.subplots()\n",
     "                ax.plot(seq)\n",
@@ -690,11 +533,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-12T16:59:38.704282Z",
-     "start_time": "2020-02-12T16:59:38.668379Z"
+     "end_time": "2020-05-06T21:53:56.837331Z",
+     "start_time": "2020-05-06T21:53:56.548439Z"
     }
    },
    "outputs": [
@@ -715,13 +558,35 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.drop(['Sequence', 'Length'], axis=1).mean(0).mul(100).round(2).astype(str) + '%'"
+    "solutions.drop(['Id'], axis=1).mean(0).mul(100).round(2).astype(str) + '%'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-07T04:19:46.343415Z",
+     "start_time": "2020-05-07T04:19:46.307508Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "linear recurrence relations 28.64 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('linear recurrence relations', round(solutions[[f'r{i}' for i in range(1, 11)]].max(axis=1).mean() * 100, 2), '%')"
    ]
   },
   {
@@ -729,13 +594,13 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-12T16:32:53.404305Z",
-     "start_time": "2020-02-12T16:32:47.371386Z"
+     "end_time": "2020-05-06T21:54:00.489854Z",
+     "start_time": "2020-05-06T21:53:56.848308Z"
     }
    },
    "outputs": [],
    "source": [
-    "data.to_csv('Sequences.csv', index=False)"
+    "solutions.to_csv('Solutions.csv', index=False)"
    ]
   },
   {
