--- a/04 MiscSequences.ipynb
+++ b/04 MiscSequences.ipynb
@@ -73,10 +73,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-05-09T04:06:14.563Z"
+     "end_time": "2020-05-09T04:06:18.160130Z",
+     "start_time": "2020-05-09T04:06:17.931297Z"
     }
    },
    "outputs": [],
@@ -93,10 +94,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-05-09T04:06:14.570Z"
+     "end_time": "2020-05-09T04:06:32.485108Z",
+     "start_time": "2020-05-09T04:06:18.165117Z"
     }
    },
    "outputs": [
@@ -163,10 +165,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-05-09T04:06:14.575Z"
+     "end_time": "2020-05-09T04:06:38.842126Z",
+     "start_time": "2020-05-09T04:06:32.488101Z"
     },
     "scrolled": false
    },
@@ -234,10 +237,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-05-09T04:06:14.582Z"
+     "end_time": "2020-05-09T05:51:07.705795Z",
+     "start_time": "2020-05-09T04:06:38.845104Z"
     }
    },
    "outputs": [
@@ -266,6 +270,14 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Solved: 14131 (6.41%)\n"
+     ]
     }
    ],
    "source": [
@@ -296,26 +308,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-05-09T04:06:14.587Z"
+     "end_time": "2020-05-09T05:51:07.859387Z",
+     "start_time": "2020-05-09T05:51:07.728740Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Solved    35.05%\n",
+       "r10        8.04%\n",
+       "r9         9.51%\n",
+       "r8        10.47%\n",
+       "r7        10.24%\n",
+       "r6         9.24%\n",
+       "r5         8.27%\n",
+       "r4         7.76%\n",
+       "r3         6.78%\n",
+       "r2         4.19%\n",
+       "r1         0.75%\n",
+       "p10        2.11%\n",
+       "p9         2.16%\n",
+       "p8         2.16%\n",
+       "p7         2.11%\n",
+       "p6         2.08%\n",
+       "p5         1.88%\n",
+       "p4         1.72%\n",
+       "p3         1.44%\n",
+       "p2         1.11%\n",
+       "p1         0.54%\n",
+       "t-s        0.18%\n",
+       "t-p        0.14%\n",
+       "t-d        0.04%\n",
+       "t-py       0.03%\n",
+       "misc       6.41%\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "solutions.drop(['Id'], axis=1).mean(0).mul(100).round(2).astype(str) + '%'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-05-09T04:06:14.592Z"
+     "end_time": "2020-05-09T05:51:08.019955Z",
+     "start_time": "2020-05-09T05:51:07.864372Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "linear recurrence relations 29.04 %\n",
+      "polynomial sequences 2.59 %\n",
+      "triplets 0.33 %\n",
+      "miscellaneous 6.41 %\n"
+     ]
+    }
+   ],
    "source": [
     "print('linear recurrence relations', round(solutions[[f'r{i}' for i in range(1, 11)]].max(axis=1).mean() * 100, 2), '%')\n",
     "print('polynomial sequences', round(solutions[[f'p{i}' for i in range(1, 11)]].max(axis=1).mean() * 100, 2), '%')\n",
@@ -325,10 +387,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-05-09T04:06:14.596Z"
+     "end_time": "2020-05-09T05:51:14.457758Z",
+     "start_time": "2020-05-09T05:51:08.022947Z"
     }
    },
    "outputs": [],
